--- a/vignettes/model-fairness.Rmd
+++ b/vignettes/model-fairness.Rmd
@@ -159,26 +159,6 @@ model_fairness(
       is close to the reference group (Caucasians). This indicates relatively
       fair treatment of Hispanics in the algorithm's predictions.
 
-    For this (and all of the following) metrics, Bayesian inference is supported
-      and provides credible intervals and Bayes factors. Like in the other
-      functions in `jfa`, performing a Bayesian analysis using a default prior
-      can be achieved by setting `prior = TRUE`. The resulting Bayes factors in
-      favor of rejection of the null hypothesis of equality ($BF_{10}$) are
-      shown in the output below.
-
-    ```{r}
-model_fairness(
-  data = compas,
-  sensitive = "Ethnicity",
-  target = "TwoYrRecidivism",
-  predictions = "Predicted",
-  reference = "Caucasian",
-  positive = "yes",
-  metric = "pp",
-  prior = TRUE
-)
-    ```
-
     This is probably also a good time to show the `summary()` and `plot()`
       functions associated with the `model_fairness()` function. Let's examine
       the frequentist function call again, but instead of printing the output to
@@ -197,6 +177,29 @@ x <- model_fairness(
 )
 summary(x)
 plot(x)
+    ```
+
+    For this (and all of the following) metrics, Bayesian inference is supported
+      and provides credible intervals and Bayes factors. Like in the other
+      functions in `jfa`, performing a Bayesian analysis using a default prior
+      can be achieved by setting `prior = TRUE`. The resulting Bayes factors in
+      favor of rejection of the null hypothesis of equality ($BF_{10}$) are
+      shown in the output below. The prior and posterior distribution on the log
+      odds ratio is displayed in the figure.
+
+    ```{r}
+x <- model_fairness(
+  data = compas,
+  sensitive = "Ethnicity",
+  target = "TwoYrRecidivism",
+  predictions = "Predicted",
+  reference = "Caucasian",
+  positive = "yes",
+  metric = "pp",
+  prior = TRUE
+)
+print(x)
+plot(x, type = "posterior")
     ```
 
 3. **Predictive rate parity (Equalized odds)**: Compares the overall positive
